fix: consertei os erros do getStatusText

--- a/src/assets/styles/TableViews.css
+++ b/src/assets/styles/TableViews.css
@@ -18,6 +18,11 @@
 
 }
 
+.edit-icon-table:hover, .delete-icon-table:hover {
+opacity: 0.5;
+
+}
+
 @media (max-width: 817px) {
   .main-container {
     position: static;
