--- a/src/assets/styles/TableViews.css
+++ b/src/assets/styles/TableViews.css
@@ -1,35 +1,60 @@
 .main-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .custom-table {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .swal2-popup {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+        'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.edit-icon-table:hover, .delete-icon-table:hover {
-opacity: 0.5;
-
+.icon-table:hover {
+    opacity: 0.5;
 }
+
+.subtitle-text {
+    color: gray;
+}
+
+.action-column {
+    display: flex;
+    justify-content: center;
+}
+
+.dialog-header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    text-align: center;
+}
+
+.form-title {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.close-icon {
+    position: absolute;
+
+    left: 85.3%;
+}
+
 
 
 @media (max-width: 817px) {
-  .main-container {
-    position: static;
-    top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    transform: none;
-  }
+    .main-container {
+        position: static;
+        top: auto;
+        margin-left: auto;
+        margin-right: auto;
+        transform: none;
+    }
 }
