--- a/src/assets/styles/TableViews.css
+++ b/src/assets/styles/TableViews.css
@@ -41,6 +41,34 @@
 
     left: 85.3%;
 }
+.first-toolbar {
+    width: 200px;
+    display: flex;
+}
+.mobile-toolbar {
+    display: none;
+}
+
+.mobile-toolbar-2 {
+    display: none;
+}
+@media (max-width: 494px) {
+    .first-toolbar {
+        display: none;
+    }
+
+    .mobile-toolbar {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 20px;
+        padding-bottom: 10px;
+    }
+
+    .mobile-toolbar-2 {
+        display: block;
+    }
+}
 
 @media (max-width: 817px) {
     .main-container {
